edit readme .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@ _deps
 offline_bmap/API.md
 offline_bmap/BMap_offline_backup地图中有按钮.html
 offline_bmap/Html_API.md
+offline_tiles
+sim_mav
+win_offline_tiles
+
