--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,10 @@ _deps
 offline_bmap/API.md
 offline_bmap/BMap_offline_backup地图中有按钮.html
 offline_bmap/Html_API.md
-offline_tiles
+offline_tiles/tiles/
+offline_tiles/tiles_hybird/
+offline_tiles/tiles_satellite/
 sim_mav
 win_offline_tiles
+
 
